finished setup notebook and cleared cells

--- a/Install_Setup.ipynb
+++ b/Install_Setup.ipynb
@@ -805,6 +805,18 @@
    "source": [
     "conda install -c conda-forge r-png"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f724bc5-94d8-41cf-aae3-5f935dd8e900",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "conda install -c r r-repr"
+   ]
   }
  ],
  "metadata": {
